src/a12/a12.h

struct a12_state;
/* response structure for a directory-open request.
 * proto 1,2 = ipvN address
 * proto 3 = tunnel */
struct a12_dynreq {
	char host[46];
	char pubk[32];
	uint16_t port;
	char authk[12];
	int proto;
};
struct a12_context_options {
/* Provide to enable asymetric key authentication, set valid in the return to
 * allow the key, otherwise the session may be continued for a random number of
 * time or bytes before being terminated. If want_session is requested, the
 * lookup function, if it is able to (legacy) should set got_session in the
 * reply and calculate the x25519 shared secret itself. */
	struct pk_response (*pk_lookup)(struct a12_state* S, uint8_t pub[static 32], void*);
	void* pk_lookup_tag;

/* Client only, provide the private key to use with the connection. All [0]
 * key will disable attempts at asymetric operation. */
	uint8_t priv_key[32];

/* default is to add a round-trip and use an ephemeral public key to transfer
 * the real one, forces active MiM in order for an attacker to track Pk
 * (re-)use. */
	bool disable_ephemeral_k;

/* if set, the shared secret will be used to authenticate public keymaterial,
 * message and cipher state for the first packets before DH exchange has been
 * completed */
	char secret[32];

/* can be set to ROLE_PROBE, ROLE_SOURCE, ROLE_SINK or ROLE_DIR */
	int local_role;

/* send a ratchet rekey after roughly these many bytes have been observed on
 * the same shared secret (in and out). */
	size_t rekey_bytes;

/* if set, authentication will permit a directory to connect to a directory */
	bool allow_directory_link;

/* if set, the a12_flush() will not return a buffer to write out, but rather
 * call into the sink as soon as there is data to send. This helps debugging
 * and simple applications, but limits data interleaving options.
 *
 * Return if the buffer could be flushed or not, failure to flush the buffer
 * marks the state machine as broken. */
	bool (*sink)(uint8_t* buf, size_t buf_sz, void* tag);
	void* sink_tag;
};
/*
 * build context and prepare packets for the connection initiator ('client')
 * the provided options structure will be modified by calls into a12_
 */
struct a12_state* a12_client(struct a12_context_options*);
/*
 * build context and prepare packets for the listening end ('server')
 * the provided options structure will be modified by calls into a12_
 */
struct a12_state* a12_server(struct a12_context_options*);
/*
 * Free the state block
 * This will return false if there are still mapped/active channels
 */
bool
a12_free(struct a12_state*);
/*
 * Take an incoming byte buffer and append to the current state of
 * the channel. Any received events will be pushed via the callback.
 *
 * If _set_destination_raw has been used, [cont] will be NULL.
 */
void a12_unpack(
	struct a12_state*, const uint8_t*, size_t, void* tag, void (*on_event)
		(struct arcan_shmif_cont* cont, int chid, struct arcan_event*, void*));
size_t
a12_flush(struct a12_state*, uint8_t**, int allow_blob);
/*
 * Get a status code indicating the state of the connection.
 *
 * <0 = dead/erroneous state
 *  0 = inactive (waiting for data)
 *  1 = processing (more data needed)
 */
int
a12_poll(struct a12_state*);
enum authentic_state {
	AUTH_UNAUTHENTICATED   = 0, /* first packet, authk- use and nonce                    */
	AUTH_SERVER_HBLOCK     = 1, /* server received client HELLO with nonce               */
	AUTH_POLITE_HELLO_SENT = 2, /* client->server, HELLO (ephemeral Pubk)                */
	AUTH_EPHEMERAL_PK      = 3, /* server->client, HELLO (ephemeral Pubk, switch cipher) */
	AUTH_REAL_HELLO_SENT   = 4, /* client->server, HELLO (real Pubk, switch cipher)      */
	AUTH_FULL_PK           = 5, /* server->client, HELLO - now rekeying can be scheduled */
};
/*
 * Get the authentication state,
 * return values are as set above.
 */
int
a12_auth_state(struct a12_state*);
/*
 * Enable debug tracing out to a FILE, set mask to the bitmap of
 * message types you are interested in messages from.
 */
enum trace_groups {
/* video system state transitions */
	A12_TRACE_VIDEO = 1,

/* audio system state transitions / data */
	A12_TRACE_AUDIO = 2,

/* system/serious errors */
	A12_TRACE_SYSTEM = 4,

/* event transfers in/out */
	A12_TRACE_EVENT = 8,

/* data transfer statistics */
	A12_TRACE_TRANSFER = 16,

/* debug messages, when patching / developing  */
	A12_TRACE_DEBUG = 32,

/* missing feature warning */
	A12_TRACE_MISSING = 64,

/* memory allocation status */
	A12_TRACE_ALLOC = 128,

/* crypto- system state transition */
	A12_TRACE_CRYPTO = 256,

/* video frame compression/transfer details */
	A12_TRACE_VDETAIL = 512,

/* binary blob transfer state information */
	A12_TRACE_BTRANSFER = 1024,

/* key-authentication and configuration warnings */
	A12_TRACE_SECURITY = 2048,

/* actions related to the directory mode and discovery */
	A12_TRACE_DIRECTORY = 4096,
};
void a12_set_endpoint(struct a12_state* S, const char*);
/*
 * Try to negotiate a connection for a directory resource based on an announced
 * public key. An ephemeral keypair will be generated and part of the reply.
 *
 * This should be used either directly and lets the outer key.
 *
 * The contents of dynreq will be free:d automatically after callback
 * completion.
 */
bool a12_request_dynamic_resource(
	struct a12_state* S,
	uint8_t ident_pubk[static 32],
	bool prefer_tunnel,
	void(*request_reply)(struct a12_state*, struct a12_dynreq, void* tag),
	void* tag);
/*
 * If the state is broken, return the hint tag set to the reason. This is short
 * (sizeof(shmif->last_words)) in order to propagate some kind of dev friendly
 * location tag.
 */
const char* a12_error_state(struct a12_state* S);
/*
 * debugging / tracing bits, just define a namespace that can be used
 * for wrapper tools to log with the same syntax and behaviour as the
 * implementation files
 */
extern int a12_trace_targets;
extern FILE* a12_trace_dst;
const char* a12int_group_tostr(int group);
#define a12int_trace(group, fmt, ...) \
	do { \
	    TracyCZone(___trace_ctx, true); \
	    const char *___trace_name = a12int_group_tostr(group); \
	    TracyCZoneName(___trace_ctx, ___trace_name, strlen(___trace_name)); \
	    char ___trace_buf[512]; \
	    int ___trace_strlen = snprintf(___trace_buf, 512, \
				"group=%s:function=%s:" fmt "\n", \
				___trace_name, __func__,##__VA_ARGS__); \
	    TracyCZoneText(___trace_ctx, ___trace_buf, MIN(511, ___trace_strlen)); \
	    TracyCZoneEnd(___trace_ctx); \
	} while (0)
#define a12int_trace(group, fmt, ...) \
	do { \
	    if (a12_trace_dst && (a12_trace_targets & group)) \
		    fprintf(a12_trace_dst, \
				"tag=%s:ts=%lld:group=%s:function=%s:" fmt "\n", S->tracetag, arcan_timemillis(),\
				a12int_group_tostr(group), __func__,##__VA_ARGS__); \
	} while (0)